2011-06-13  Colin Watson  <cjwatson@ubuntu.com>

	* docs/man/grub-mklayout.h2m (DESCRIPTION): Add a reference to the
	input format.

2011-05-29  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Obtaining and Building GRUB): Substitute
	`ftp.gnu.org' for `alpha.gnu.org'.

2011-05-27  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/kern/emu/hostdisk.c (linux_find_partition): Handle
	partitions under /dev/disk/by-id/.

2011-05-27  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/kern/emu/hostdisk.c (linux_find_partition): Give up
	after ten consecutive open failures.  Scanning all the way up to
	10000 is excessive and can cause serious performance problems in
	some configurations.
	Fixes Ubuntu bug #787461.

2011-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/arc/arcdisk.c (reopen): Close old handle before
	opening new one.

2011-05-21  Colin Watson  <cjwatson@ubuntu.com>
2011-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't stat devices unless we have to.

	* grub-core/kern/emu/getroot.c (grub_find_device): Recognize
	dir == /dev/mapper.
	(grub_guess_root_device): Use already known os_dev if possible.
	* grub-core/kern/emu/hostdisk.c
	(convert_system_partition_to_system_disk): Scan only in /dev/mapper
	if device is known to be a dm one.

2011-05-20  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig.in: Export GRUB_CMDLINE_LINUX_XEN_REPLACE and
	GRUB_CMDLINE_LINUX_XEN_REPLACE_DEFAULT.
	Reported by: Pawel Tecza.

2011-05-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (lsacpi): Fix ia64 mismerge.
	(lsefisystab): Likewise.
	(lssal): Likewise.
	(lsefimmap): Likewise.
	(hdparm): Enable on qemu-mips.
	(setjmp): Add ia64 nodist.
	(serial): Simplify tags.

2011-05-18  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.util.def (grub-ofpathname): Install manual page.

2011-05-18  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/fs/squash4.c: Add missing GRUB_MOD_LICENSE.
